--- a/.github/workflows/cicd-back-end.yml
+++ b/.github/workflows/cicd-back-end.yml
@@ -26,14 +26,18 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install aws-sam-cli
       
+      # This adds the "IaC" directory to the Python path so Python can find the modules.
       - name: Set PYTHONPATH
         run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/IaC" >> $GITHUB_ENV
 
+      # This runs pytest on the unit test files.
       - name: Run tests
         run: pytest IaC/tests/unit/ 
         env:
           AWS_DEFAULT_REGION: 'us-east-1'
 
+      # Build/Package/Deploy AWS SAM 
+      # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide
       - name: SAM Build
         run: sam build -t IaC/template.yaml
 
@@ -54,13 +58,13 @@ jobs:
           
       
 
-      - name: Get API URL 2
-        id: get_api_url
-        run: |
-          API_URL=$(aws cloudformation describe-stacks --stack-name IaC --region us-east-1 --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
-          echo "::set-output name=api_url::$API_URL"
-        # echo "API_URL=${API_URL}" >> $GITHUB_ENV suggested update for depreciated run for above
+      # - name: Get API URL 2
+      #   id: get_api_url
+      #   run: |
+      #     API_URL=$(aws cloudformation describe-stacks --stack-name IaC --region us-east-1 --query "Stacks[0].Outputs[?OutputKey=='HelloWorldApi'].OutputValue" --output text)
+      #     echo "::set-output name=api_url::$API_URL"
+      #   # echo "API_URL=${API_URL}" >> $GITHUB_ENV suggested update for depreciated run for above
           
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
