--- a/.github/workflows/cicd-front-end.yml
+++ b/.github/workflows/cicd-front-end.yml
@@ -52,9 +52,10 @@ jobs:
         DISTRIBUTION_ID=${{ steps.get_distribution_id.outputs.distribution_id }}
         aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
 
-    # Install dependencies and run tests here
+    # Install dependencies and run tests
     - name: Install dependencies and run E2E tests
       run: |
+        npx playwright install
         cd tests/e2e
         npm install
         npx playwright test
